tests/semantic/type_system1/type_system1.err
Error: Unable to deduce the type of the argument in file type_system1.dl at line 39
NumberRelation([1+1]).                 // error
----------------^-------------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 39
NumberRelation([1+1]).                 // error
------------------^-----------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 43
NumberRelation([1+1, 1+1]).            // error
----------------^-------------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 43
NumberRelation([1+1, 1+1]).            // error
------------------^-----------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 43
NumberRelation([1+1, 1+1]).            // error
---------------------^--------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 43
NumberRelation([1+1, 1+1]).            // error
-----------------------^------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 47
NumberRelation([1+1, 1+1, 1+1]).       // error
----------------^-------------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 47
NumberRelation([1+1, 1+1, 1+1]).       // error
------------------^-----------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 47
NumberRelation([1+1, 1+1, 1+1]).       // error
---------------------^--------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 47
NumberRelation([1+1, 1+1, 1+1]).       // error
-----------------------^------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 47
NumberRelation([1+1, 1+1, 1+1]).       // error
--------------------------^---------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 47
NumberRelation([1+1, 1+1, 1+1]).       // error
----------------------------^-------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 58
SymbolRelation(1+1).                   // error
---------------^--------------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 58
SymbolRelation(1+1).                   // error
-----------------^------------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 64
SymbolRelation([1+1]).                 // error
----------------^-------------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 64
SymbolRelation([1+1]).                 // error
------------------^-----------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 68
SymbolRelation([1+1, 1+1]).            // error
----------------^-------------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 68
SymbolRelation([1+1, 1+1]).            // error
------------------^-----------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 68
SymbolRelation([1+1, 1+1]).            // error
---------------------^--------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 68
SymbolRelation([1+1, 1+1]).            // error
-----------------------^------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 72
SymbolRelation([1+1, 1+1, 1+1]).       // error
----------------^-------------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 72
SymbolRelation([1+1, 1+1, 1+1]).       // error
------------------^-----------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 72
SymbolRelation([1+1, 1+1, 1+1]).       // error
---------------------^--------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 72
SymbolRelation([1+1, 1+1, 1+1]).       // error
-----------------------^------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 72
SymbolRelation([1+1, 1+1, 1+1]).       // error
--------------------------^---------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 72
SymbolRelation([1+1, 1+1, 1+1]).       // error
----------------------------^-------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 83
SingleNumberRelation(1+1).             // error
---------------------^--------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 83
SingleNumberRelation(1+1).             // error
-----------------------^------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 97
DoubleNumberRelation(1+1).             // error
---------------------^--------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 97
DoubleNumberRelation(1+1).             // error
-----------------------^------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 110
TripleNumberRelation(1+1).             // error
---------------------^--------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 110
TripleNumberRelation(1+1).             // error
-----------------------^------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 123
SingleSymbolRelation(1+1).             // error
---------------------^--------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 123
SingleSymbolRelation(1+1).             // error
-----------------------^------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 128
SingleSymbolRelation([1+1]).           // error
----------------------^-------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 128
SingleSymbolRelation([1+1]).           // error
------------------------^-----------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 136
DoubleSymbolRelation(1+1).             // error
---------------------^--------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 136
DoubleSymbolRelation(1+1).             // error
-----------------------^------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 141
DoubleSymbolRelation([1+1, 1+1]).      // error
----------------------^-------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 141
DoubleSymbolRelation([1+1, 1+1]).      // error
------------------------^-----------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 141
DoubleSymbolRelation([1+1, 1+1]).      // error
---------------------------^--------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 141
DoubleSymbolRelation([1+1, 1+1]).      // error
-----------------------------^------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 149
TripleSymbolRelation(1+1).             // error
---------------------^--------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 149
TripleSymbolRelation(1+1).             // error
-----------------------^------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 154
TripleSymbolRelation([1+1, 1+1, 1+1]). // error
----------------------^-------------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 154
TripleSymbolRelation([1+1, 1+1, 1+1]). // error
------------------------^-----------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 154
TripleSymbolRelation([1+1, 1+1, 1+1]). // error
---------------------------^--------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 154
TripleSymbolRelation([1+1, 1+1, 1+1]). // error
-----------------------------^------------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 154
TripleSymbolRelation([1+1, 1+1, 1+1]). // error
--------------------------------^---------------
Error: Unable to deduce the type of the argument in file type_system1.dl at line 154
TripleSymbolRelation([1+1, 1+1, 1+1]). // error
----------------------------------^-------------
50 errors generated, evaluation aborted
